--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,7 +46,41 @@
 
   /* nav height */
   --nav-height: 64px;
-}
+
+
+
+
+
+
+/* fonts */
+--heading-font-family: acumin-pro, arial, sans-serif;
+--body-font-family: acumin-pro, arial, sans-serif;
+--fixed-font-family: "Roboto Mono", menlo, consolas, "Liberation Mono", monospace;
+
+/* colors */
+--text-color: #ffffff;
+--link-color: #ffffff;
+--link-hover-color: Invalid input color;
+--background-color: #ffffff;
+--overlay-background-color: #eeeeee;
+--highlight-background-color: #cccccc;
+
+/* sizes */
+--heading-font-size-xxl: 38.4px;
+--heading-font-size-xl: 23.04px;
+--heading-font-size-l: 21.12px;
+--heading-font-size-m: 19.2px;
+--heading-font-size-s: 19.2px;
+--heading-font-size-xs: 19.2px;
+--body-font-size-xl: 32px;
+--body-font-size-l: 19.2px;
+--body-font-size-m: 16px;
+
+
+ }
+
+
+
 
 @font-face {
   font-family: roboto-fallback;
